# argparse-oop

./: LICENSE  README.md  pyproject.toml
argparse_oop/cli/: base.py  cli.py  errors.py  main.py  options.py  utils.py
argparse_oop/cli/commands/: get.py
argparse_oop/cli/commands/get_subcommands/: get_device.py
